# bofire

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  OA_Flash point.pkl  README.md  _quarto.yml  conda.yml  for_gabe.ipynb  getting_started.html  getting_started.qmd  hello_azure_claude.py  index.html  install.html  install.qmd  main (cont, cat_desc, cat, mol_fpfrag) 2obj qnehvi.py  main (cont, cat_desc, cat, mol_fpfrag) 2obj sobo.py  main (cont, cat_desc, cat, mol_fpfrag).py  main (cont, cat_desc, mol_desc) 2obj qnehvi.py  main (cont, cat_desc, mol_desc) 2obj sobo.py  main (cont, cat_desc, mol_desc).py  main (cont, cat_desc, mol_fpfrag).py  main (cont, mol_fpfrag).py  main (mol_fpfrag) serial copy.py  main (mol_fpfrag) serial.py  main (mol_fpfrag).py  main_fragprints.py  main_min_working.py  mkdocs.yaml  objects.inv  pyproject.toml  pyright_output.txt  pyrightconfig.json  requirements.txt  robots.txt  scratch.py  (+15 more)
.devcontainer/: conda.yml  devcontainer.json  postCreateCommand.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: docs-build.yaml  docs.yaml  lint.yaml  main.yaml  publish.yaml  quarto-docs.yaml  test.yaml
CONTRIBUTING/: index.html
basic_examples/: index.html
bofire/: __init__.py  protocols.py  samplers.py  tapfn.ipynb
bofire/any/: api.py  constraint.py  constraints.py  feature.py  features.py  kernel.py  model.py  objective.py  prior.py  sampler.py  strategy.py
bofire/benchmarks/: LookUpTableBenchmark.py  LookupTableBenchmark.py  api.py  aspen_benchmark.py  benchmark.py  detergent.py  hyperopt.py  molecule_benchmark.py  multi.py  multiobjective.py  single.py  singleobjective.py  svm.py  visualization.py  zdt.py
bofire/convergence_criteria/: api.py  mapper.py  objective_improvement.py  proposal_deviation.py
bofire/data_models/: _register_utils.py  api.py  base.py  enum.py  filters.py  transforms.py  types.py  unions.py  validated.py
bofire/domain/: __init__.py  constraint.py  constraints.py  desirability_functions.py  domain.py  feature.py  features.py  objective.py  objectives.py  util.py
bofire/kernels/: aggregation.py  api.py  categorical.py  conditional.py  mapper.py  shape.py  spherical_kernels.py
bofire/llm/: api.py  capabilities_mapper.py  context.py  experiment_tools.py  formulator.py  formulator_converter.py  formulator_prompts.py  formulator_schemas.py  mapper.py
bofire/mappers/: opti.py
bofire/models/: cloudpickle_module.py  diagnostics.py  feature_importance.py  model.py  priors.py  random_forest.py  rf.py  torch_models.py  torch_pickle_module.py
bofire/outlier_detection/: api.py  mapper.py  outlier_detection.py  outlier_detections.py
bofire/plot/: api.py  cv_folds.py  duplicates.py  feature_importance.py  gp_slice.py  objective.py  plot_gp_slice.py  plot_test.py  prior.py  results.py
bofire/priors/: api.py  mapper.py
bofire/runners/: api.py  hyperoptimize.py  run.py
bofire/serial/: constraints.py  deserialization.py  domain.py  features.py  models.py  objectives.py  serial.py  serialization.py  strategies.py
bofire/strategies/: api.py  botorch.py  candidate.py  doe_strategy.py  enum.py  factorial.py  fractional_factorial.py  llm.py  mapper.py  mapper_actual.py  mapper_meta.py  multiobjective.py  polytope.py  predictive.py  qehvi.py  qnehvi.py  qparego.py  random.py  shortest_path.py  sobo.py  space_filling.py  stepwise.py  strategy.py  uniform_gradient.py  utils.py  validation.py  values.py
bofire/surrogates/: api.py  botorch.py  botorch_surrogates.py  cloudpickle_module.py  deterministic.py  empirical.py  (+29 more)
data_models_functionals/: index.html
design_with_explicit_formula/: index.html
docs/: README.md  basic_examples.ipynb  cph_dev.ipynb  data_models.md  data_models_functionals.md  datamodels.md  design_with_explicit_formula.ipynb  domain.md  domains.md  examples.md  fingerprint_bayesopt.ipynb  fractional_factorial.ipynb  getting_started.ipynb  index.md  install.md  multifidelity_bo.ipynb  nchoosek_constraint.ipynb  old_index.md  optimality_criteria.ipynb  pruning.md  reaction_optimization.ipynb  ref-constraints.md  ref-domain-util.md  ref-domain.md  ref-features.md  ref-mappers.md  ref-objectives.md  ref-utils.md  start.md  strategies.md  surrogates_table.md  userguide_strategies.md  userguide_surrogates.md
domain/: index.html
examples/: index.html
fingerprint_bayesopt/: index.html
fractional_factorial/: index.html
getting_started/: index.html
install/: index.html
mcts-report/: REPORT.md  benchmark.py  benchmark_nig.py  benchmark_nig_adaptive.py  benchmark_nig_adaptive_n0.py  benchmark_ts.py  investigate_sampling_vs_optimizing.py  optimize_mcts_dag.py  optimize_mcts_full.py  optimize_mcts_nig.py  optimize_mcts_ts.py  results.json  results_nig.json  results_nig_adaptive.json  results_nig_adaptive_n0.json  results_ts.json  test.ipynb  test_acqf_hartmann.py  test_dag.ipynb
multifidelity_bo/: index.html
nchoosek_constraint/: index.html
notebooks/: 001-manual.ipynb  002-Himmelblau.ipynb  003-DTLZ2.ipynb  004-Snar.ipynb  constraints.ipynb  fixed.ipynb  xt.ipynb
optimality_criteria/: index.html
reaction_optimization/: index.html
ref-constraints/: index.html
ref-domain/: index.html
ref-domain-util/: index.html
ref-features/: index.html
ref-mappers/: index.html
ref-objectives/: index.html
ref-utils/: index.html
scripts/: benchmark_exact_wasserstein_memory.py  benchmark_playground.py  opti_test.py  playground.py  run_tutorials.py  wasserstein_order_debug.py
search/: search_index.json
strategies/: index.html
tests/: conftest.py  doctest.py  test_docs.py
tutorials/: GettingStarted.ipynb  README.md  Reaction_Optimization_Example.ipynb  entmoot_example.ipynb  getting_started.ipynb  hyperopt.ipynb  models.ipynb  models_cloudpickle.ipynb  models_serial.ipynb  multi_task_gp_testing.py  quick_start.ipynb  random_forest_in_bofire.ipynb  strategies_serial.ipynb  toy_example_JPD.ipynb  transfer_learning_bo.ipynb  util.py
userguide_surrogates/: index.html
(+903 files in other folders)
