[build-system]
requires = ["setuptools", "setuptools_scm[toml]", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "node-and-date"
write_to = "./bofire/version.py"
[tool.ruff]
ignore = [
    "E501",  # don't enforce for comments and docstrings
    "B017",  # required for tests
    "B027",  # required for optional _tell method
    "B028",
    "B904",
    "B905",
]
line-length = 88
select = ["B", "C", "E", "F", "W", "I"]

[tool.ruff.mccabe]
max-complexity = 18

[tool.ruff.per-file-ignores]
"bofire/surrogates/api.py" = ["F401"]
"bofire/utils/annotated.py" = ["F401"]
"bofire/data_models/outlier_detection/api.py" = ["F401"]
"bofire/outlier_detection/api.py" = ["F401"]
"tests/bofire/data_models/specs/api.py" = ["F401"]
"bofire/data_models/api.py" = ["F401"]
"bofire/data_models/surrogates/api.py" = ["F401"]
"bofire/benchmarks/api.py" = ["F401"]
"bofire/runners/api.py" = ["F401"]

[tool.pyright]
include = ["bofire"]
exclude = ["bofire/version.py"]
