[build-system]
requires = ["setuptools", "setuptools_scm[toml]", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "node-and-date"
write_to = "./bofire/version.py"

[tool.ruff]
target-version = "py39"
line-length = 88
output-format = "concise"

[tool.ruff.lint]
select = ["B", "C", "E", "F", "W", "I"]
ignore = [
    "E501",  # don't enforce for comments and docstrings
    "B017",  # required for tests
    "B027",  # required for optional _tell method
    "B028",
    "B904",
    "B905",
]
isort.split-on-trailing-comma = false
isort.lines-after-imports = 2
isort.known-first-party = ["bofire"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.per-file-ignores]
"bofire/surrogates/api.py" = ["F401"]
"bofire/data_models/priors/api.py" = ["F401"]
"bofire/priors/api.py" = ["F401"]
"bofire/utils/annotated.py" = ["F401"]
"bofire/data_models/outlier_detection/api.py" = ["F401"]
"bofire/outlier_detection/api.py" = ["F401"]
"tests/bofire/data_models/specs/api.py" = ["F401"]
"bofire/data_models/api.py" = ["F401"]
"bofire/data_models/surrogates/api.py" = ["F401"]
"bofire/benchmarks/api.py" = ["F401"]
"bofire/runners/api.py" = ["F401"]
"bofire/strategies/mapper.py" = ["F401"]
"bofire/strategies/api.py" = ["F401"]
"bofire/data_models/features/api.py" = ["F401"]
"bofire/data_models/strategies/api.py" = ["F401"]
"bofire/data_models/dataframes/api.py" = ["F401"]
"bofire/plot/api.py" = ["F401"]

[tool.pyright]
include = ["bofire"]
exclude = ["bofire/version.py"]
